# rust-kubernetes-operator-example

./: Cargo.toml  Dockerfile  Makefile  README.md
src/: api.rs  controller.rs  crd_generator.rs  main.rs
src/api/: game_types.rs  world_types.rs
src/controller/: game_controller.rs  world_controller.rs
test/resources/: oasis.yaml
