[package]
name = "rust-kubernetes-operator-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crdgen"
path = "src/crd_generator.rs"

[dependencies]
futures = "0.3.31"
k8s-openapi = { version = "0.23.0", features = ["latest"] }
kube = { version = "0.97.0", features = ["runtime", "client", "derive"] }
thiserror = "2.0.8"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
schemars = "0.8.21"
serde = "1"
serde_json = "1.0"
serde_yaml = "0.9.34+deprecated"
async-trait = "0.1.83"
